--- a/asset/scss/seafoam.scss
+++ b/asset/scss/seafoam.scss
@@ -3255,10 +3255,6 @@ grid-template-areas:
     }
   }
 
-  .media-render.iiif {
-    width: 100%;
-  }
-
   .media.file {
     width: 100%;
   }
@@ -3266,4 +3262,9 @@ grid-template-areas:
   /*Centre img for non-iiif material*/ 
   .media-embed .resource {
     text-align: center;
+  }
+
+  /*Utility Classes*/ 
+  .no-margin-top {
+    margin-top:-1 * $global-margin;
   }
