--- a/view/layout/layout.phtml
+++ b/view/layout/layout.phtml
@@ -94,7 +94,7 @@ $bannerPosition = ($this->themeSetting('banner_position')) ? str_replace('_','-'
                     <?php echo $footerContent; ?>
                 </footer>
                 <?php else: ?>
-                <footer class="footerContainer">							
+                <footer class="footerContainer full-width">							
                     <div class="grid-x grid-padding-x grid-container padding-vertical-3">                        
                         <div class="cell small-6 medium-4 padding-left-1 padding-bottom-1">
                             <div class="footerLogos">
