--- a/view/common/block-template/a-card.phtml
+++ b/view/common/block-template/a-card.phtml
@@ -19,8 +19,8 @@ $assetColumn = in_array($assetCount, [1, 2, 4]) ? 'asset-column-2' : 'asset-colu
         <?php if ($page): ?>
             <a href="<?php echo $escape($page->siteUrl()); ?>">
                 <?php $altLinkTitle = ($attachment['alt_link_title'] !== '') ? $escape($attachment['alt_link_title']) : false; ?>
-                <span class="link-title card-divider"><?php echo ($altLinkTitle) ? $altLinkTitle : $escape($page->title()); ?></span>
                 <?php echo $assetImage; ?>
+                <span class="h3 link-title card-divider"><?php echo ($altLinkTitle) ? $altLinkTitle : $escape($page->title()); ?></span>
             </a>
         <?php else: ?>
             <?php echo $assetImage; ?>
