--- a/asset/scss/seafoam.scss
+++ b/asset/scss/seafoam.scss
@@ -3285,13 +3285,13 @@ grid-template-areas:
   .assets:has(.asset.card) .card img {
     height: 12rem;
     @include breakpoint(medium) {
-    height: 15rem;
+    height: 14rem;
     }
     @include breakpoint(large) {
-    height: 18rem;
+    height: 16rem;
     }
     @include breakpoint(xlarge) {
-      height: 20rem;
+      height: 18rem;
       }
   }
 .assets.asset-column-2:has(.asset.card) {
@@ -3322,14 +3322,15 @@ grid-template-areas:
 }
 
 .asset.card {
-  @include card-container($light-gray, $black, 0, 0, rem-calc(12), rgba(149, 157, 165, 0.2) 0px 8px 24px);
+  @include card-container($light-gray, $black, 0, 0, rem-calc(4), rgba(149, 157, 165, 0.2) 0px 8px 24px);
   width: 100%;
   & span.card-divider {
-    background: $primary-color;
+    background: $white;
     margin-bottom: 0;
   }
   & span.h3 {
-    color: $white;
+    color: $black;
+    font-weight: 800;
   }
 }
 
