--- a/view/common/block-layout/file.phtml
+++ b/view/common/block-layout/file.phtml
@@ -2,15 +2,14 @@
 $this->headLink()->appendStylesheet($this->assetUrl('css/annona.css')); 
 $this->headScript()->appendFile($this->assetUrl('js/annona.js'));
 $hyperlink = $this->plugin('hyperlink');
-
-
+$thumbnailType = $block->dataValue('thumbnail_type');
 ?>
 
 <div class="media-embed-block flex-container flex-dir-column align-middle <?php echo $this->escapeHtml(implode(' ', $classes)); ?> file">
     <div class="attachments resource-text-openseadragon flex-container">
     <?php foreach($this->attachments as $attachment): ?>
         <?php $item = $attachment->item(); ?>
-        <div class="item resource flex-container flex-dir-column align-middle">
+        <div class="item resource flex-container flex-dir-column align-middle <?php echo $thumbnailType; ?>">
         <?php
             $media = $attachment->media() ?: $item->primaryMedia();
             $mediaRenderer = $media->renderer();
