Added openseadragon heights (square, medium, medium-large, large)

--- a/asset/scss/seafoam.scss
+++ b/asset/scss/seafoam.scss
@@ -3000,7 +3000,10 @@ display: none;
 /*For Inclusion*/
 .media-text { 
   width: 100%;
+  padding: 0;
+  @include breakpoint(medium) {
   padding: 1rem 1rem 0 1rem;
+  }
  }
  
  /*Testing CSS Grid horizontal and vertical blocks*/
@@ -3254,7 +3257,9 @@ grid-template-areas:
 
   .media-render {
     width: 100%;
+    @include breakpoint(medium) {
     padding: 1rem;
+    }
     @include breakpoint(large) {
       padding: 1rem 1.5rem 1rem 0;
       @include breakpoint(large) {
@@ -3332,5 +3337,26 @@ grid-template-areas:
     color: $black;
     font-weight: 800;
   }
+}
+
+.square .openseadragon {
+  height: rem-calc(280px)!important;
+  width: 85vw!important;
+  @include breakpoint(500) {
+    width: rem-calc(360px)!important;
+    height: rem-calc(360px)!important;
+  }
+}
+
+.medium .openseadragon {
+  height: 50vh!important;
+}
+
+.medium-large .openseadragon {
+  height: 65vh!important;
+}
+
+.large .openseadragon {
+  height: 80vh!important;
 }
 
