Removed minimum width from Image Banner block

--- a/asset/scss/seafoam.scss
+++ b/asset/scss/seafoam.scss
@@ -1343,7 +1343,7 @@ height: 60vh!important;
 }
 
 .image-banner .image-container img {
-  max-width: 1400px;
+  max-width: unset; 
 }
 
 section.image-banner {
