--- a/asset/scss/seafoam.scss
+++ b/asset/scss/seafoam.scss
@@ -1346,6 +1346,22 @@ height: 60vh!important;
   max-width: unset; 
 }
 
+/*Add dark text option for Image Banner*/ 
+.image-banner-dark-text .image-banner .overlay-container > h1,
+.image-banner-dark-text .image-banner .overlay-container > p {
+  font-weight: 300;
+  background: #ffffffba;
+  color: #000;
+  padding: 1rem;
+  width: fit-content;
+}
+
+.image-banner-dark-text .image-banner .overlay-container > p {
+  padding: 0.5rem;
+  margin-block: 0;
+  opacity: 0.9;
+}
+
 section.image-banner {
   margin-top: -1 * $global-margin;
   @include breakpoint(medium) {
