--- a/asset/scss/seafoam.scss
+++ b/asset/scss/seafoam.scss
@@ -2250,7 +2250,7 @@ grid-template-areas:
   grid-template-columns: 2fr 3fr;
   grid-template-areas: 
   "header ." 
-  "media-block" ;
+  "text media-block" ;
   }
 }
 
@@ -2484,32 +2484,20 @@ grid-template-areas:
 }
 
 /*JPEG Styling*/
+.media-embed-block img {
+  object-fit: contain;
+  height: 100%;
+  max-height: 70vh;
+}
 .media-embed-block .medium img {
-  height: 60vh!important;
-  @include breakpoint(medium) {
-    height: vh!important;
-  }
   @include breakpoint(large) {
-    height: 60vh!important;
+    max-height: 60vh!important;
   }
 } 
 
-.media-embed-block .medium-large img {
-  height: 60vh!important;
-  @include breakpoint(medium) {
-    height: 75vh!important;
-  }
-  @include breakpoint(large) {
-    height: 70vh!important;
-  }
-}
 .media-embed-block .large img {
-  height: 60vh!important;
-  @include breakpoint(medium) {
-    height: 75vh!important;
-  }
   @include breakpoint(large) {
-    height: 85vh!important;
+    max-height: 85vh!important;
   }
 }
 
