--- a/asset/scss/seafoam.scss
+++ b/asset/scss/seafoam.scss
@@ -987,107 +987,8 @@ display: none;
   vertical-align: top!important;
 }
 
-.media-text {
-  padding: $global-padding;
-  @include breakpoint(medium) {
-      padding: 2 * $global-padding $global-padding; 
-      }
-  &.left {
-      order: 0;
-  }
-  &.right {
-      order: 1;
-  }
-  @include breakpoint(large) {
-    padding: 3 * $global-padding $global-padding;
-  }
-  @include breakpoint(xlarge) {
-    padding: 4 * $global-padding $global-padding;
-  }
-}
-
-.media-text h2 {
-  margin-bottom: 0 * $global-margin;
-}
-
-.media-text .left,
-.media-text .right {
-  max-width: unset;
-  float: unset;
-  margin: unset;
-}
-
-.media-text.caption-toggle .left {
-  @include breakpoint(xlarge) {
-    margin-left: 8.3333333333%;
-}
-}
-
-.media-text.caption-toggle .right {
-  @include breakpoint(xlarge) {
-    margin-right: 8.3333333333%;
-}
-}
-
-.media-text-heading {
-  flex-basis: 100%;
-  @include breakpoint(medium) {
-      padding-left: 1 * $global-padding;
-      }
-  @include breakpoint(large) {
-      padding-left: 1.5 * $global-padding;
-      }
-}
-
-figcaption.orbit-caption.caption p {
-  margin-bottom: 0;
-  /*Added for Annona*/ 
-  font-style: initial;
-  font-weight: initial;
-  font-size: initial;
-  @include breakpoint(large) {
-      margin-bottom: $global-margin;
-      text-align: right;
-  }
-}
-
-figcaption.orbit-caption {
-  font-style: initial;
-  font-weight: initial;
-  font-size: initial;
-}
-
-.image-cover .title-area {
-  @include breakpoint(large) {
-      height: 100vh;
-      overflow-y: scroll;
-      justify-content: flex-start;
-  }
-  @include breakpoint(xlarge) {
-      justify-content: center;
-  }
-}
-
-.image-cover .title-area p,
-.image-cover .title-area h2 {
-  padding: $global-padding;
-}
-
 .item.resource {
   width: 100%;
-}
-
-.captions-center .resource h2,
-.captions-center .resource .orbit-caption.caption {
-  text-align: center;
-}
-.captions-left .resource h2,
-.captions-left .resource .orbit-caption.caption.caption {
-  text-align: left;
-}
-.captions-right .resource h2,
-.captions-right .resource .orbit-caption.caption.caption {
-  text-align: right;
 }
 
 /*Browse Preview Gallery*/ 
@@ -2444,12 +2345,12 @@ grid-template-areas:
 }
 
 /*Multiples styling*/ 
-.layout-vertical.attachment-count-2 .resource-text-openseadragon .medium .openseadragon,
-.layout-vertical.attachment-count-2 .resource-text-openseadragon .medium-large .openseadragon,
-.layout-vertical.attachment-count-2 .resource-text-openseadragon .large .openseadragon,
-.layout-vertical.attachment-count-3 .resource-text-openseadragon .medium .openseadragon,
-.layout-vertical.attachment-count-3 .resource-text-openseadragon .medium-large .openseadragon,
-.layout-vertical.attachment-count-3 .resource-text-openseadragon .large .openseadragon {
+.layout-vertical.attachment-count-2 .medium .openseadragon,
+.layout-vertical.attachment-count-2 .medium-large .openseadragon,
+.layout-vertical.attachment-count-2 .large .openseadragon,
+.layout-vertical.attachment-count-3 .medium .openseadragon,
+.layout-vertical.attachment-count-3 .medium-large .openseadragon,
+.layout-vertical.attachment-count-3 .large .openseadragon {
   height: 40vh!important;
   width: 100%;
 }
