--- a/view/common/block-layout/file.phtml
+++ b/view/common/block-layout/file.phtml
@@ -41,7 +41,7 @@ $thumbnailType = $block->dataValue('thumbnail_type');
             $caption = $attachment->caption();
             if ($caption):
             ?>
-            <div class="caption padding-1"><?php echo $caption; ?></div>
+            <div class="caption"><?php echo $caption; ?></div>
         <?php endif; ?>
         <div class="metadata">
             <?php $showTitleOption = $this->showTitleOption; ?>
