--- a/asset/scss/seafoam.scss
+++ b/asset/scss/seafoam.scss
@@ -2423,6 +2423,7 @@ section.image-banner {
   color: $dark-gray;
   margin: 0 1 * $global-margin 0.5 * $global-margin 1 * $global-margin;
   border-left: solid 5px $warning-color;
+  align-self: baseline;
   & p {
     padding-bottom: rem-calc(8);
     /*border-bottom: solid 1px $light-gray;*/ 
