Updated search results page

--- a/asset/scss/seafoam.scss
+++ b/asset/scss/seafoam.scss
@@ -2430,3 +2430,39 @@ section.image-banner {
     margin-bottom: 0;
   }
 }
+
+/*Resource Grid*/ 
+.resource-grid {
+  display: grid;
+  grid-template-columns: 1fr;
+  @include breakpoint(401) {
+    grid-template-columns: 1fr 1fr;
+    }
+
+  @include breakpoint(650) {
+  grid-template-columns: 1fr 1fr 1fr;
+  }
+  @include breakpoint(xlarge) {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    }
+}
+
+.resource-grid .resource {
+  width: 100%!important;
+}
+  
+  .thumbnail, 
+  .resource.show .resource-link img, 
+  .media-list img, 
+  .resource .resource-link img {
+    width: 100%;
+    object-fit: cover;
+    height: rem-calc(200);
+    @include breakpoint(medium) {
+    height: rem-calc(250);
+    }
+  }
+
+  .resource-meta .description.full {
+    display: none;
+  }
