--- a/view/omeka/site/item/browse.phtml
+++ b/view/omeka/site/item/browse.phtml
@@ -123,7 +123,7 @@ foreach ($items as $item):
         <div class="resource-meta <?php echo ($isGrid) ? '' : 'media-object-section'; ?>">
             <?php
             $linkContent = sprintf('%s<span class="resource-name">%s</span>',
-                $thumbnail($item, 'medium'),
+                $thumbnail($item, 'medium-large'),
                 $escape($heading));
             echo $item->linkRaw($linkContent, null, ['class' => 'resource-link']);
             ?>
